update perfomance code & build

--- a/public/svg-map-drawer.-demo.html
+++ b/public/svg-map-drawer.-demo.html
@@ -322,14 +322,14 @@
         indonesiaRoot.render(
             SVGMap.React.createElement(SVGMap.default, {
                 regions: regions_indonesia,
-                svgUrl: "https://cdn.jsdelivr.net/npm/svg-map-drawer/dist/indonesia.svg"
+                svgUrl: "https://cdn.jsdelivr.net/gh/zedfar/assets@main/public/svg/map/indonesia.svg"
             })
         );
         
         worldRoot.render(
             SVGMap.React.createElement(SVGMap.default, {
                 regions: regions_world,
-                svgUrl: "https://cdn.jsdelivr.net/npm/svg-map-drawer/dist/world.svg"
+                svgUrl: "https://cdn.jsdelivr.net/gh/zedfar/assets@main/public/svg/map/world.svg"
             })
         );
 
